Initial implementation of distcc wrapper
The gdistcc wrapper program will call "distcc" (or $DISTCC)
with a suitable value of $DISTCC_HOSTS, extracted from the
current Ganglia state and sorted by their current loadavg.
Hosts with a load exceeding number of cpus will be excluded.

--- a/Makefile.am
+++ b/Makefile.am
@@ -14,7 +14,7 @@ INCLUDES = @APR_INCLUDES@
 AUTOMAKE_OPTIONS = dist-bzip2 dist-tarZ dist-zip
 ACLOCAL_AMFLAGS = -I m4
 
-GANGLIA_SUBDIRS = lib libmetrics tests $(GMETAD_SUBDIR) gmond gstat gmetric include mans
+GANGLIA_SUBDIRS = lib libmetrics tests $(GMETAD_SUBDIR) gmond gstat gdistcc gmetric include mans
 SUBDIRS = $(GANGLIA_SUBDIRS)
 # Make sure that no matter the setting for --with-gmetad
 # that the gmetad directory gets distributed
